fix(tabs): adding fixes for font-size and/or text-align  on parent causing layout shift.

--- a/packages/web-components/src/components/rux-tabs/rux-tab-panel/rux-tab-panel.scss
+++ b/packages/web-components/src/components/rux-tabs/rux-tab-panel/rux-tab-panel.scss
@@ -3,6 +3,8 @@
     position: relative;
     visibility: visible;
     z-index: 1;
+    font-size: var(--font-size-base); //fixes issue where parent element with larger font-size causes layout shift.
+    text-align: left;
 }
 
 :host([hidden]) {
